--- a/Servicios/Destapadora-De-Cloacas.html
+++ b/Servicios/Destapadora-De-Cloacas.html
@@ -144,27 +144,27 @@ Destapadora De Cloacas
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/No-Puedo-Destapar-La-Cañeria-en-Palermo.html">No Puedo Destapar La Cañeria en Palermo </a> 
+       <a href="../Servicios/Destapacaños-harpic-turbo.html">Destapacaños harpic turbo </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapar-Desague-Pluvial.html">Destapar Desague Pluvial </a> 
+       <a href="../Servicios/Bomba-para-destapar-inodoros.html">Bomba para destapar inodoros </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Como-se-puede-destapar-el-baño-sin-destapacaños.html">Como se puede destapar el baño sin destapacaños </a> 
+       <a href="../Servicios/Destapa-cañerias-productos-argentina.html">Destapa cañerias productos argentina </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Con-Que-Destapo-Una-Cantilde;eria.html">Con Que Destapo Una Cañeria </a> 
+       <a href="../Servicios/Impacto-economico-de-la-plata.html">Impacto economico de la plata </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Camara-De-Inspeccion-Cloacal.html">Camara De Inspeccion Cloacal </a> 
+       <a href="../Destapa-Cañerias/Destapador-De-Cañerias.html">Destapador De Cañerias </a> 
          </li>
 <!--EndPostsList-->
 
@@ -227,57 +227,57 @@ Destapadora De Cloacas
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-junin.html">Destapaciones de cloacas junin </a> 
+       <a href="../Destapa-Cañerias/Maquina-para-destapar-cañerias-cuanto-cuesta.html">Maquina para destapar cañerias cuanto cuesta </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Descubrimiento-de-la-plata-elemento-quimico.html">Descubrimiento de la plata elemento quimico </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De.html">Destapaciones De </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapar-cañerias-casero-vinagre.html">Destapar cañerias casero vinagre </a> 
+       <a href="../Servicios/El-Plomero-Destapa-Cañerias-en-Palermo.html">El Plomero Destapa Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destape-De-Desagues.html">Destape De Desagues </a> 
+       <a href="../Servicios/Relieve-de-la-zona-norte-grande-de-chile.html">Relieve de la zona norte grande de chile </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapa-cañerias-productos-argentina.html">Destapa cañerias productos argentina </a> 
+       <a href="../Servicios/Camara-De-Inspeccion-Cloacal.html">Camara De Inspeccion Cloacal </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Harpic-destapacaños-instrucciones.html">Harpic destapacaños instrucciones </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-cañerias-de-desague-de-cocina.html">Como destapar cañerias de desague de cocina </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/No-Puedo-Destapar-La-Cañeria-en-Palermo.html">No Puedo Destapar La Cañeria en Palermo </a> 
+       <a href="../Destapa-Cañerias/Destapar-Cañeria-De-La-Cocina.html">Destapar Cañeria De La Cocina </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Limpieza-De-Cañerias.html">Limpieza De Cañerias </a> 
+       <a href="../Destapa-Cañerias/Como-remover-pelos-encravados.html">Como remover pelos encravados </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Bolsa-de-asar-mercadona.html">Bolsa de asar mercadona </a> 
+       <a href="../Servicios/Destapador-de-cañerias-sodimac.html">Destapador de cañerias sodimac </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Con-Que-Destapo-Un-Bantilde;o.html">Con Que Destapo Un Baño </a> 
+       <a href="../Destapa-Cañerias/Cual-es-la-mejor-estrategia-para-La-coca-cola-es-buena-para-destapar-cantilde;erias.html">Cual es la mejor estrategia para La coca cola es buena para destapar cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapaciones-Cantilde;erias.html">Destapaciones Cañerias </a> 
+       <a href="../Servicios/Como-destapar-el-baño-con-bicarbonato-y-vinagre.html">Como destapar el baño con bicarbonato y vinagre </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
