--- a/Servicios/Destapar-Cañerias-Con-Grasa-en-Palermo.html
+++ b/Servicios/Destapar-Cañerias-Con-Grasa-en-Palermo.html
@@ -137,27 +137,27 @@ Destapar Cañerias Con Grasa
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapacañerias-ayudin-opiniones.html">Destapacañerias ayudin opiniones </a> 
+       <a href="../Servicios/Necesito-ayuda-con-Cantilde;eria-de-bantilde;o-tapada.html">Necesito ayuda con Cañeria de baño tapada </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapadora-De-Cañerias-en-Palermo.html">Destapadora De Cañerias en Palermo </a> 
+       <a href="../Servicios/Como-limpiar-el-inodoro-del-sarro.html">Como limpiar el inodoro del sarro </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Cocina-mabe-4-quemadores.html">Cocina mabe 4 quemadores </a> 
+       <a href="../Servicios/Como-desatascar-una-tuberia.html">Como desatascar una tuberia </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Estoy-buscando-consejos-sobre-Destapar-cantilde;erias-con-bicarbonato.html">Estoy buscando consejos sobre Destapar cañerias con bicarbonato </a> 
+       <a href="../Servicios/Estoy-interesado-en-aprender-mas-acerca-de-Cantilde;eria-de-lavaplatos.html">Estoy interesado en aprender mas acerca de Cañeria de lavaplatos </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Renta-de-destapacaños-home-depot.html">Renta de destapacaños home depot </a> 
+       <a href="../Servicios/Me-gustaria-conocer-tus-opiniones-acerca-de-Destapar-cantilde;eria-con-vinagre.html">Me gustaria conocer tus opiniones acerca de Destapar cañeria con vinagre </a> 
          </li>
 <!--EndPostsList-->
 
@@ -220,32 +220,7 @@ Destapar Cañerias Con Grasa
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Con-Que-Destapo-Un-Bantilde;o.html">Con Que Destapo Un Baño </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Servicios/Maquina-Destapaciones-De-Cantilde;erias.html">Maquina Destapaciones De Cañerias </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Servicios/Para-Destrancar-Cantilde;erias.html">Para Destrancar Cañerias </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Precios.html">Destapaciones Precios </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Servicios/Liquido-destapa-cañerias-casero.html">Liquido destapa cañerias casero </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Servicios/Repuesto-de-quemadores-para-parrillas-a-gas.html">Repuesto de quemadores para parrillas a gas </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-la-cañeria-del-baño-con-soda-caustica.html">Como destapar la cañeria del baño con soda caustica </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -255,22 +230,47 @@ Destapar Cañerias Con Grasa
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-tapado-con-jabon.html">Como destapar un inodoro tapado con jabon </a> 
+       <a href="../Servicios/Destapador-De-Bantilde;o-Precio.html">Destapador De Baño Precio </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias-viejas.html">Remedios caseros para destapar cañerias viejas </a> 
+       <a href="../Servicios/Dans-quel-pays-est-bahia-bla.html">Dans quel pays est bahia bla </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Remedio-casero-para-destapar-cañerias.html">Remedio casero para destapar cañerias </a> 
+       <a href="../Servicios/Descubrimiento-de-la-plata-elemento-quimico.html">Descubrimiento de la plata elemento quimico </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapador-De-Baño.html">Destapador De Baño </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Destapar-desague-de-cocina.html">Destapar desague de cocina </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Con-Que-Destapo-Un-Bantilde;o.html">Con Que Destapo Un Baño </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
        <a href="../Destapa-Cañerias/Como-remover-pelos-encravados.html">Como remover pelos encravados </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Area-de-observacion-de-urgencias.html">Area de observacion de urgencias </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapaciones-Urgencias.html">Destapaciones Urgencias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
